fix: simplify logo rendering to prevent blurriness in mobile view

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -693,12 +693,9 @@ footer .container {
     height: 80px;
     width: auto;
     transition: opacity 0.3s ease;
-    image-rendering: -webkit-optimize-contrast;
-    image-rendering: -moz-crisp-edges;
-    image-rendering: crisp-edges;
-    transform: translateZ(0);
-    backface-visibility: hidden;
-    -webkit-backface-visibility: hidden;
+    image-rendering: auto;
+    -webkit-font-smoothing: none;
+    -moz-osx-font-smoothing: none;
 }
 
 .footer-logo:hover {
@@ -712,15 +709,11 @@ footer .container {
     }
 
     .footer-logo {
+        height: 80px;
         width: auto;
-        height: auto;
-        max-width: 100%;
-        image-rendering: -webkit-optimize-contrast;
-        image-rendering: -moz-crisp-edges;
-        image-rendering: crisp-edges;
-        transform: translateZ(0);
-        backface-visibility: hidden;
-        -webkit-backface-visibility: hidden;
+        image-rendering: auto;
+        -webkit-font-smoothing: none;
+        -moz-osx-font-smoothing: none;
     }
 }
 
